Major refactoring to the frontend of the main page, used FDM main colours for the page. Created a new button component to be used throughout the application.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --background: #c5ff00;
   --foreground: #171717;
@@ -19,7 +23,7 @@
   }
 
   .logo path {
-    fill: var(--foreground)
+    fill: var(--foreground);
   }
 }
 
@@ -30,7 +34,7 @@ body {
 }
 
 .logo path {
-  fill: var(--foreground)
+  fill: var(--foreground);
 }
 
 .btn {
@@ -38,5 +42,5 @@ body {
 }
 
 .lnk {
-  @apply hover:underline
+  @apply hover:underline;
 }
